--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,9 @@ jobs:
       - run: npm run build
       - run: |
           echo @harshbhama: https://npm.pkg.github.com/ > build/.npmrc
-
+          echo '//npm.pkg.github.com/:_authToken=${NPM_TOKEN}' >> build/.npmrc
       - run: npm publish
         working-directory: ./build 
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
          
